@startuml

interface UserDetails
interface GrantedAuthority

class Accommodation {
- id: Long
- isDeleted : boolean
- type : Type
- location : Location
- size : String
- amenities : Set<Amenity>
- dailyRate : BigDecimal
- availability : Integer
}

class Location {
- id: Long
- isDeleted : boolean
- country : String
- city : String
- region : String
- zipCode : String
- address : String
- description : String
}

class Amenity {
- id: Long
- isDeleted : boolean
- title : String
- description : String
}

class Role {
- name : RoleName
}


class User {
- id: Long
- isDeleted : boolean
- email : String
- password : String
- firstName : String
- lastName : String
- role: Role
}

class Booking {
- id: Long
- isDeleted : boolean
- checkInDate : LocalDate
- checkOutDate : LocalDate
- accommodation : Accommodation
- user : User
- status : Status
}

class Payment {
- id: Long
- isDeleted : boolean
- status : Status
- dateTimeCreated : LocalDateTime
- booking : Booking
- amountToPay : BigDecimal
- sessionUrl : URL
- sessionID : String
}

enum Type {
    APARTMENT,
    GUEST_HOUSE,
    HOSTEL,
    HOTEL,
    HOUSE,
    VACATION_HOME,
    VILLA
}

enum RoleName {
    CUSTOMER,
    ADMIN
}

enum Status {
    PENDING,
    CONFIRMED,
    CANCELED,
    EXPIRED,
    PAID
}

note "org.springframework.security.core" as MyNote
MyNote .. UserDetails
MyNote .. GrantedAuthority

UserDetails <|.. User
GrantedAuthority <|.. Role

Role "1" o- "n" User
User "1" o- "n" Booking
Location "1" o- "n" Accommodation
Accommodation "n" -o "n" Amenity
Booking "n" --o "1" Accommodation
Payment "1" --* "1" Booking

Role <.. RoleName
Accommodation <.. Type
Payment <. Status
Status ..> Booking


@enduml
